# gtlang

./: CMakeLists.txt  CppProperties.json  README.md  core.h  language.template.gtl  main.cpp  test.gtc  test1.gtc  thread.gtc
Debug/: main.d  makefile  subdir.mk
core/: classes.h  commons.h  exceptions.h  exec.h  functions.h  ifs.h  io.h  loops.h  maths.h  mysql.h  requests.h  structures.h  threads.h  token.h
language_files/: es.gtl  fr.gtl  jp.gtl  ru.gtl  zh.gtl
libs/: Mixed.h  funcs.h  libs.h  php2cpp.h
tools/: test.php  tests.gtt  thread_pi.gtc
